--- a/Human Gait Identification.ipynb
+++ b/Human Gait Identification.ipynb
@@ -5,7 +5,7 @@
    "id": "96a75c68-86e7-4d92-9908-f5f5d485de6e",
    "metadata": {},
    "source": [
-    "Install Dependancies (noooooo, foook you)"
+    "Install Dependancies "
    ]
   },
   {
