Extracting Joints and Setting up Folders of dataset

--- a/Human Gait Identification.ipynb
+++ b/Human Gait Identification.ipynb
@@ -21,7 +21,8 @@
       "Requirement already satisfied: opencv-python in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (4.9.0.80)\n",
       "Requirement already satisfied: numpy>=1.21.2 in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from opencv-python) (1.26.3)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: mediapipe in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (0.10.9)\n",
+      "Requirement already satisfied: mediapipe in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (0.10.9)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
       "Requirement already satisfied: absl-py in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from mediapipe) (2.1.0)\n",
       "Requirement already satisfied: attrs>=19.1.0 in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from mediapipe) (23.2.0)\n",
       "Requirement already satisfied: flatbuffers>=2.0 in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from mediapipe) (23.5.26)\n",
@@ -41,7 +42,6 @@
       "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from matplotlib->mediapipe) (2.8.2)\n",
       "Requirement already satisfied: pycparser in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from CFFI>=1.0->sounddevice>=0.4.4->mediapipe) (2.21)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->mediapipe) (1.16.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -72,7 +72,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting sklearnNote: you may need to restart the kernel to use updated packages.\n"
+      "Collecting sklearn\n",
+      "  Using cached sklearn-0.0.post12.tar.gz (2.6 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'error'\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
@@ -115,10 +119,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  Using cached sklearn-0.0.post12.tar.gz (2.6 kB)\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'error'\n",
       "Requirement already satisfied: matplotlib in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (3.8.2)\n",
       "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from matplotlib) (1.2.0)\n",
       "Requirement already satisfied: cycler>=0.10 in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from matplotlib) (0.12.1)\n",
@@ -171,7 +171,8 @@
    "id": "de555518",
    "metadata": {},
    "source": [
-    "# Extracting and Drawing Joints"
+    "# Extracting and Drawing Joints\n",
+    "<img src=\"https://www.researchgate.net/profile/Jungpil-Shin/publication/362351225/figure/fig3/AS:1183521695645696@1659184969422/Mediapipe-detects-33-nodes-of-the-human-pose.ppm\" width=\"500px\">"
    ]
   },
   {
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "59af0816-c70d-4155-acce-b0f673971782",
    "metadata": {},
    "outputs": [],
@@ -239,23 +240,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "mediapipe.python.solution_base.SolutionOutputs"
+       "33"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#number of detected landmarks\n",
-    "len(results.pose_landmarks.landmark)\n"
+    "len(results.pose_landmarks.landmark)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "0f477314",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_keypoints(results):\n",
+    "    pose = np.array([[res.x, res.y, res.z, res.visibility] for res in results.pose_landmarks.landmark]).flatten() if results.pose_landmarks else np.zeros(33*4)\n",
+    "    return pose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8222829f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 5.33204436e-01,  3.53722215e-01, -1.11866856e+00,  9.97585118e-01,\n",
+       "        5.60662031e-01,  2.85479695e-01, -1.06956565e+00,  9.95640159e-01,\n",
+       "        5.79667449e-01,  2.84901947e-01, -1.06966901e+00,  9.95842636e-01,\n",
+       "        5.97794712e-01,  2.86072046e-01, -1.06995273e+00,  9.94155884e-01,\n",
+       "        5.12273729e-01,  2.94160455e-01, -1.06048727e+00,  9.97253954e-01,\n",
+       "        4.98674065e-01,  2.98513353e-01, -1.06037521e+00,  9.97979164e-01,\n",
+       "        4.86103833e-01,  3.03281277e-01, -1.06096566e+00,  9.97840643e-01,\n",
+       "        6.29389226e-01,  3.07845503e-01, -6.47804141e-01,  9.96171713e-01,\n",
+       "        4.75476682e-01,  3.26999396e-01, -5.97448349e-01,  9.98833299e-01,\n",
+       "        5.74326277e-01,  4.07171130e-01, -9.50631917e-01,  9.98288751e-01,\n",
+       "        5.11687100e-01,  4.13326412e-01, -9.36698556e-01,  9.99069810e-01,\n",
+       "        7.84441590e-01,  5.88353157e-01, -2.36885637e-01,  9.93393123e-01,\n",
+       "        3.58175069e-01,  5.72574198e-01, -3.48331034e-01,  9.98146474e-01,\n",
+       "        9.71885860e-01,  8.03134620e-01, -1.40977845e-01,  6.93759799e-01,\n",
+       "        1.09586790e-01,  8.31938624e-01, -8.83649707e-01,  9.39502478e-01,\n",
+       "        1.14246559e+00,  9.40496385e-01, -4.62998390e-01,  6.54271960e-01,\n",
+       "        3.21977645e-01,  8.48627329e-01, -1.78639007e+00,  8.96774232e-01,\n",
+       "        1.20123649e+00,  9.68460023e-01, -5.23408294e-01,  5.45615852e-01,\n",
+       "        3.88382316e-01,  9.19550180e-01, -1.94309497e+00,  7.79203892e-01,\n",
+       "        1.19231677e+00,  9.44351315e-01, -5.84518075e-01,  6.07417405e-01,\n",
+       "        4.40398842e-01,  9.00605977e-01, -1.90804255e+00,  7.98656940e-01,\n",
+       "        1.15343559e+00,  9.45659637e-01, -5.02613425e-01,  6.00100935e-01,\n",
+       "        4.22638655e-01,  8.83942425e-01, -1.79223979e+00,  7.64785886e-01,\n",
+       "        7.10432708e-01,  1.34543777e+00, -5.18409982e-02,  1.81954242e-02,\n",
+       "        4.24647421e-01,  1.34355867e+00,  5.57825789e-02,  2.31126975e-02,\n",
+       "        7.23171175e-01,  1.93476486e+00, -2.07198709e-01,  9.96390078e-03,\n",
+       "        4.22805637e-01,  1.94555211e+00, -5.60887642e-02,  8.98239948e-03,\n",
+       "        7.16617942e-01,  2.51228333e+00,  2.21727699e-01,  1.35869137e-03,\n",
+       "        4.39201504e-01,  2.51512742e+00,  2.15612799e-01,  1.22265529e-03,\n",
+       "        7.20137656e-01,  2.59288645e+00,  2.31010631e-01,  8.19746230e-04,\n",
+       "        4.34931040e-01,  2.59699273e+00,  2.22127035e-01,  1.13116601e-03,\n",
+       "        6.78617477e-01,  2.68992853e+00, -3.71045321e-01,  1.42423867e-03,\n",
+       "        4.82644141e-01,  2.68541789e+00, -4.10614878e-01,  2.39087455e-03])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_test = extract_keypoints(results)\n",
+    "result_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4b6ed6c",
+   "metadata": {},
+   "source": [
+    "# 4. Setup Folders for Collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Path for exported data, numpy arrays\n",
+    "DATA_PATH = os.path.join('Custom_Activity_Dataset') \n",
+    "\n",
+    "# Actions that we try to detect\n",
+    "actions = np.array(['stand', 'walk', 'run'])\n",
+    "\n",
+    "# Thirty videos worth of data\n",
+    "no_sequences = 30\n",
+    "\n",
+    "# Videos are going to be 30 frames in length\n",
+    "sequence_length = 30\n",
+    "\n",
+    "# Folder start\n",
+    "start_folder = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bafb492",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for action in actions:\n",
+    "    for sequence in range(no_sequences):\n",
+    "        try: \n",
+    "            os.makedirs(os.path.join(DATA_PATH, action, str(sequence)))\n",
+    "        except:\n",
+    "            pass"
    ]
   }
  ],
