Introducting Muti-Person Pose Estimatation

--- a/Mediapipe Implementation.ipynb
+++ b/Mediapipe Implementation.ipynb
@@ -343,7 +343,7 @@
     "DATA_PATH = os.path.join('Custom_Activity_Dataset') \n",
     "\n",
     "# Actions that we try to detect\n",
-    "actions = np.array(['stand', 'walk', 'run'])\n",
+    "actions = np.array(['lance','samer','seif'])\n",
     "\n",
     "# Thirty videos worth of data\n",
     "no_sequences = 30\n",
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "1bafb492",
    "metadata": {},
    "outputs": [],
@@ -369,6 +369,22 @@
     "        except:\n",
     "            pass"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11f6fefa",
+   "metadata": {},
+   "source": [
+    "# Importing Casia-B Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d0d868a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
