Dataset capturing Standby

--- a/Movnet Implementation.ipynb
+++ b/Movnet Implementation.ipynb
@@ -192,8 +192,8 @@
     }
    ],
    "source": [
-    "%pip install tensorflow==2.10\n",
-    "%pip install tensorflow-gpu==2.10\n",
+    "%pip install tensorflow\n",
+    "%pip install tensorflow-gpu\n",
     "%pip install tensorflow-hub\n",
     "%pip install opencv-python\n",
     "%pip install matplotlib"
@@ -412,7 +412,7 @@
     "views = np.array(['Front','Back','Left','Right'])\n",
     "\n",
     "# 10 videos worth of data\n",
-    "no_sequences = 10\n",
+    "no_sequences = 20\n",
     "\n",
     "# Videos are going to be 30 frames in length\n",
     "sequence_length = 90"
