--- a/Model/media-minaaa.ipynb
+++ b/Model/media-minaaa.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2ff11962",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0761b716",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "419e8a34",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2d7ee0e5",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "59af0816-c70d-4155-acce-b0f673971782",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0f477314",
    "metadata": {},
    "outputs": [],
@@ -419,49 +419,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8222829f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 5.95324874e-01,  7.67588258e-01, -1.53986239e+00,  9.92246628e-01,\n",
-       "        6.19150758e-01,  6.95967972e-01, -1.46318650e+00,  9.81938422e-01,\n",
-       "        6.37103975e-01,  6.97682023e-01, -1.46351337e+00,  9.87350762e-01,\n",
-       "        6.54165447e-01,  7.00219929e-01, -1.46361625e+00,  9.75556314e-01,\n",
-       "        5.61672747e-01,  6.89435661e-01, -1.49150646e+00,  9.88045752e-01,\n",
-       "        5.35855889e-01,  6.85229003e-01, -1.49126136e+00,  9.93285894e-01,\n",
-       "        5.12058139e-01,  6.82925224e-01, -1.49190867e+00,  9.90844429e-01,\n",
-       "        6.63430810e-01,  7.27027774e-01, -9.18700337e-01,  9.81904447e-01,\n",
-       "        4.60720390e-01,  7.11216927e-01, -1.04127860e+00,  9.96198356e-01,\n",
-       "        6.18313074e-01,  8.44865561e-01, -1.32182133e+00,  9.87454057e-01,\n",
-       "        5.52002847e-01,  8.40525985e-01, -1.35795903e+00,  9.95935798e-01,\n",
-       "        7.90489137e-01,  1.03269315e+00, -5.12168825e-01,  9.44662988e-01,\n",
-       "        2.91930914e-01,  1.00699961e+00, -6.73138261e-01,  9.78248060e-01,\n",
-       "        9.14449394e-01,  1.37391520e+00, -5.72034478e-01,  4.33092788e-02,\n",
-       "        1.70394361e-01,  1.44521749e+00, -7.69587934e-01,  1.52471036e-01,\n",
-       "        8.71510386e-01,  1.59846044e+00, -1.11714554e+00,  1.89168379e-02,\n",
-       "        2.82630146e-01,  1.59491849e+00, -1.38391471e+00,  5.10663614e-02,\n",
-       "        8.84805560e-01,  1.68639123e+00, -1.25573230e+00,  3.01717129e-02,\n",
-       "        2.99659699e-01,  1.67930937e+00, -1.56495142e+00,  6.67686984e-02,\n",
-       "        8.40498924e-01,  1.65160704e+00, -1.30347908e+00,  4.49421480e-02,\n",
-       "        3.33217651e-01,  1.62164164e+00, -1.59842610e+00,  1.05194554e-01,\n",
-       "        8.26142669e-01,  1.61285961e+00, -1.16046166e+00,  4.11515459e-02,\n",
-       "        3.33327413e-01,  1.58648670e+00, -1.41744053e+00,  8.68904069e-02,\n",
-       "        6.92482829e-01,  1.83510709e+00, -2.06905529e-02,  4.50679538e-04,\n",
-       "        3.64551306e-01,  1.83972728e+00,  2.67149713e-02,  4.91488783e-04,\n",
-       "        7.01835573e-01,  2.48004532e+00, -1.07559703e-01,  3.84024181e-03,\n",
-       "        4.22668308e-01,  2.45094991e+00, -4.33792204e-01,  9.53081006e-04,\n",
-       "        7.19298244e-01,  3.06666493e+00,  5.56751192e-01,  1.91523388e-04,\n",
-       "        4.36758667e-01,  3.05077767e+00,  9.77323875e-02,  5.23953240e-05,\n",
-       "        7.19702601e-01,  3.16663599e+00,  5.79269052e-01,  1.57838309e-04,\n",
-       "        4.33725774e-01,  3.16144872e+00,  1.21090040e-01,  7.46118967e-05,\n",
-       "        6.69031084e-01,  3.27644730e+00, -1.43354133e-01,  4.12413443e-04,\n",
-       "        4.90783542e-01,  3.22829652e+00, -6.73394084e-01,  3.59781552e-04])"
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4ee1af69",
    "metadata": {},
    "outputs": [],
@@ -516,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1bafb492",
    "metadata": {},
    "outputs": [],
@@ -532,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "2d0d868a",
    "metadata": {},
    "outputs": [],
@@ -610,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "d3b3be96",
    "metadata": {},
    "outputs": [
@@ -629,22 +604,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "c22cd3cf",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] The system cannot find the path specified: 'Custom_Gait_Dataset_V.2\\\\Hamza Tharwat\\\\Right'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m person \u001b[38;5;129;01min\u001b[39;00m persons:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m view \u001b[38;5;129;01min\u001b[39;00m views:\n\u001b[1;32m----> 4\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m sequence \u001b[38;5;129;01min\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray(\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mDATA_PATH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mperson\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mview\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mint\u001b[39m):\n\u001b[0;32m      5\u001b[0m             window \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      6\u001b[0m             \u001b[38;5;28;01mfor\u001b[39;00m frame_num \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(sequence_length):\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: 'Custom_Gait_Dataset_V.2\\\\Hamza Tharwat\\\\Right'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sequences, labels = [], []\n",
     "for person in persons:\n",
