--- a/Model/Gait-CNN.ipynb
+++ b/Model/Gait-CNN.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "id": "4a726d6b",
    "metadata": {},
    "outputs": [
@@ -103,9 +103,7 @@
       "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from scikit-learn) (1.3.2)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from scikit-learn) (3.3.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: imageio in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (2.34.0)\n",
-      "Requirement already satisfied: Pillow in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (10.2.0)\n",
-      "Requirement already satisfied: numpy in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from imageio) (1.26.3)\n",
+      "Requirement already satisfied: pillow in c:\\users\\lance\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (10.2.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -116,24 +114,15 @@
     "%pip install tensorflow\n",
     "%pip install matplotlib\n",
     "%pip install scikit-learn\n",
-    "%pip install imageio Pillow\n"
+    "%pip install pillow\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "id": "3e7b4676-e428-4ec4-b851-e26a33947ddd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\lance\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import mediapipe as mp\n",
@@ -141,7 +130,7 @@
     "import os\n",
     "from matplotlib import pyplot as plt\n",
     "import winsound\n",
-    "import imageio\n",
+    "from PIL import Image\n",
     "from sklearn.model_selection import train_test_split\n",
     "from tensorflow.keras.utils import to_categorical\n",
     "from sklearn.metrics import multilabel_confusion_matrix, accuracy_score\n",
@@ -159,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "id": "2ff11962",
    "metadata": {},
    "outputs": [],
@@ -170,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "id": "0761b716",
    "metadata": {},
    "outputs": [],
@@ -181,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "id": "419e8a34",
    "metadata": {},
    "outputs": [],
@@ -197,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "id": "2d7ee0e5",
    "metadata": {},
    "outputs": [],
@@ -208,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "id": "59af0816-c70d-4155-acce-b0f673971782",
    "metadata": {},
    "outputs": [],
@@ -233,28 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "eae80de8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(frame)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "id": "0f477314",
    "metadata": {},
    "outputs": [],
@@ -266,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "id": "8222829f",
    "metadata": {},
    "outputs": [
@@ -283,7 +251,7 @@
        "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 90,
    "id": "4ee1af69",
    "metadata": {},
    "outputs": [],
@@ -313,13 +281,8 @@
     "DATA_PATH = os.path.join('Custom_Gait_Dataset_V.4') \n",
     "\n",
     "# Persons that we try to detect\n",
-    "# persons = np.array(['Lance'])\n",
     "persons = np.array(['Lance Moheb'])\n",
     "# persons = np.array(['Hamza Tharwat','Kirolos Hany','Lance Moheb','Remonda Malak','Romario Nagy','Sandy Moheb'])\n",
-    "\n",
-    "#Very person with 4 different view\n",
-    "# views = np.array(['Front','Back','Left','Right'])\n",
-    "views = np.array(['Side'])\n",
     "\n",
     "# 10 videos worth of data\n",
     "no_sequences = 1\n",
@@ -338,38 +301,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
    "id": "1bafb492",
    "metadata": {},
    "outputs": [],
    "source": [
     "for person in persons:\n",
-    "    for view in views:\n",
-    "        for sequence in range(no_sequences):\n",
-    "            try: \n",
-    "                os.makedirs(os.path.join(DATA_PATH, person, view, str(sequence)))\n",
-    "            except:\n",
-    "                pass"
+    "    for sequence in range(no_sequences):\n",
+    "        try: \n",
+    "            os.makedirs(os.path.join(DATA_PATH, person, str(sequence)))\n",
+    "        except:\n",
+    "            pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 64,
    "id": "2d0d868a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'png'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 38\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;66;03m# NEW Export keypoints\u001b[39;00m\n\u001b[0;32m     37\u001b[0m keypoints \u001b[38;5;241m=\u001b[39m extract_keypoints(results)\n\u001b[1;32m---> 38\u001b[0m npy_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDATA_PATH\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mperson\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mview\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msequence\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mframe_num\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpng\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     39\u001b[0m np\u001b[38;5;241m.\u001b[39msave(npy_path, frame)\n\u001b[0;32m     42\u001b[0m cv2\u001b[38;5;241m.\u001b[39mimshow(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGait ID\u001b[39m\u001b[38;5;124m'\u001b[39m, image)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'png'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cap = cv2.VideoCapture(feed)\n",
     "# Set mediapipe model \n",
@@ -378,46 +328,45 @@
     "    # NEW LOOP\n",
     "    # Loop through persons\n",
     "    for person in persons:\n",
-    "        ## Loop through views\n",
-    "        for view in views:\n",
-    "           for sequence in range(no_sequences):\n",
-    "                for frame_num in range(sequence_length):\n",
+    "        for sequence in range(no_sequences):\n",
+    "            for frame_num in range(sequence_length):\n",
     "\n",
-    "                    # Read feed\n",
-    "                    ret, frame = cap.read()\n",
+    "                # Read feed\n",
+    "                ret, frame = cap.read()\n",
     "\n",
-    "                    # Make detections\n",
-    "                    image, results = mediapipe_detection(frame, holistic)\n",
+    "                # Make detections\n",
+    "                image, results = mediapipe_detection(frame, holistic)\n",
     "\n",
-    "                    # Draw landmarks\n",
-    "                    draw_landmarks(image, results)\n",
+    "                # Draw landmarks\n",
+    "                draw_landmarks(image, results)\n",
+    "                \n",
+    "                # NEW Apply wait logic\n",
+    "                if frame_num == 0: \n",
+    "                    cv2.putText(image, 'STARTING COLLECTION', (120,200), \n",
+    "                            cv2.FONT_HERSHEY_SIMPLEX, 1, (0,255, 0), 1, cv2.LINE_AA)\n",
+    "                    cv2.putText(image, 'Collecting frames for {} Video, frame Number #{}#'.format(person, sequence), (15,12), \n",
+    "                            cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 1, cv2.LINE_AA)\n",
+    "                    winsound.Beep(1000,1000)\n",
+    "                    cv2.waitKey(3000)\n",
+    "                    winsound.Beep(1000,500)\n",
+    "                    winsound.Beep(1000,500)\n",
+    "                else: \n",
+    "                    cv2.putText(image, 'Collecting frames for {} Video, frame Number #{}#'.format(person, sequence), (15,12), \n",
+    "                            cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 1, cv2.LINE_AA)\n",
     "                    \n",
-    "                    # NEW Apply wait logic\n",
-    "                    if frame_num == 0: \n",
-    "                        cv2.putText(image, 'STARTING COLLECTION', (120,200), \n",
-    "                                cv2.FONT_HERSHEY_SIMPLEX, 1, (0,255, 0), 1, cv2.LINE_AA)\n",
-    "                        cv2.putText(image, 'Collecting frames for {} Video for {} view frame Number #{}#'.format(person, view, sequence), (15,12), \n",
-    "                                cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 1, cv2.LINE_AA)\n",
-    "                        winsound.Beep(1000,1000)\n",
-    "                        cv2.waitKey(3000)\n",
-    "                        winsound.Beep(1000,500)\n",
-    "                        winsound.Beep(1000,500)\n",
-    "                    else: \n",
-    "                        cv2.putText(image, 'Collecting frames for {} Video for {} view frame Number #{}#'.format(person, view, sequence), (15,12), \n",
-    "                                cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 1, cv2.LINE_AA)\n",
-    "                        \n",
-    "                    # NEW Export keypoints\n",
-    "                    keypoints = extract_keypoints(results)\n",
-    "                    npy_path = f\"{DATA_PATH}/{person}/{view}/{sequence}/{frame_num}\"\n",
-    "                    np.save(npy_path, frame)\n",
+    "                # NEW Export keypoints\n",
+    "                keypoints = extract_keypoints(results)\n",
+    "                png_path = f\"{DATA_PATH}/{person}/{sequence}/{frame_num}\"\n",
+    "                img = Image.fromarray(cv2.cvtColor(frame, cv2.COLOR_BGR2RGB), 'RGB')\n",
+    "                img.save(f'{png_path}.jpg')\n",
     "\n",
-    "                    \n",
-    "                    cv2.imshow('Gait ID', image)\n",
+    "                \n",
+    "                cv2.imshow('Gait ID', image)\n",
     "\n",
-    "                    # Break gracefully\n",
-    "                    if cv2.waitKey(10) & 0xFF == 27:\n",
-    "                        break\n",
-    "        if cv2.waitKey(10) & 0xFF == ord('n'):\n",
+    "                # Break gracefully\n",
+    "                if cv2.waitKey(10) & 0xFF == 27:\n",
+    "                    break\n",
+    "        if cv2.waitKey(10) & 0xFF == 27:\n",
     "            continue\n",
     "        else:\n",
     "            break\n",
@@ -444,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "d3b3be96",
    "metadata": {},
    "outputs": [
@@ -452,7 +401,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Hamza Tharwat': 0, 'Kirolos Hany': 1, 'Lance Moheb': 2, 'Micheal Nady': 3, 'Mina Nady': 4, 'Mohmed Youssef': 5, 'Omar Mohmed': 6, 'Remonda Malak': 7, 'Romario Nagy': 8, 'Sandy Moheb': 9, 'Seif Ibrahim': 10, 'Zaid Diaa': 11}\n"
+      "{'Lance Moheb': 0}\n"
      ]
     }
    ],
@@ -463,37 +412,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "c22cd3cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "sequences, labels = [], []\n",
     "for person in persons:\n",
-    "    for view in views:\n",
-    "        for sequence in np.array(os.listdir(os.path.join(DATA_PATH, person, view))).astype(int):\n",
-    "            window = []\n",
-    "            for frame_num in range(sequence_length):\n",
+    "    for sequence in np.array(os.listdir(os.path.join(DATA_PATH, person))).astype(int):\n",
+    "        window = []\n",
+    "        for frame_num in range(sequence_length):\n",
     "\n",
-    "                res = np.load(os.path.join(DATA_PATH, person, view, str(sequence), \"{}.npy\".format(frame_num)))\n",
-    "                window.append(res)\n",
-    "            sequences.append(window)\n",
-    "            labels.append(label_map[person])"
+    "            image_path = os.path.join(DATA_PATH, person, str(sequence), f\"{frame_num}.jpg\")\n",
+    "            res = cv2.imread(image_path)\n",
+    "            res\n",
+    "            window.append(res)\n",
+    "        sequences.append(window)\n",
+    "        labels.append(label_map[person])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "e8c625fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(240, 60, 132)"
+       "(1, 90, 480, 640, 3)"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
