--- a/Model/GAIT.ipynb
+++ b/Model/GAIT.ipynb
@@ -7526,7 +7526,7 @@
     }
    ],
    "source": [
-    "plt.imshow(exported[30],cmap='gray')"
+    "plt.imshow(proccessed[30],cmap='gray')"
    ]
   },
   {
